--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,7 +9,10 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+        "@core/*": ["core/*"]
+    }
   },
   "exclude": ["node_modules", "dist"]
 }
