Refactoring app module

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,7 +11,7 @@
     "baseUrl": "./",
     "incremental": true,
     "paths": {
-        "@core/*": ["src/core/*"]
+        "@app/*": ["src/app/*"]
     }
   },
   "exclude": ["node_modules", "dist"]
