--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^6.7.2",
@@ -57,7 +57,8 @@
       "ts"
     ],
     "moduleNameMapper": {
-      "^@app/(.*)$": "<rootDir>/app/$1"
+      "^@app/(.*)$": "<rootDir>/$1",
+      "^@common/(.*)$": "<rootDir>/common/$1"
     },
     "rootDir": "src",
     "testRegex": ".spec.ts$",
