--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,10 @@
     "test:e2e": "jest --config test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.7.2",
-    "@nestjs/core": "^6.7.2",
-    "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/common": "^6.10.11",
+    "@nestjs/config": "0.0.7",
+    "@nestjs/core": "^6.10.11",
+    "@nestjs/platform-express": "^6.10.11",
     "@nestjs/typeorm": "^6.2.0",
     "dotenv": "^8.2.0",
     "pg": "^7.14.0",
