--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^6.10.11",
     "@nestjs/platform-express": "^6.10.11",
     "@nestjs/typeorm": "^6.2.0",
+    "bcrypt": "^3.0.7",
     "dotenv": "^8.2.0",
     "pg": "^7.14.0",
     "reflect-metadata": "^0.1.13",
@@ -36,6 +37,7 @@
     "@nestjs/cli": "^6.9.0",
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.7.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
@@ -59,7 +61,8 @@
     ],
     "moduleNameMapper": {
       "^@app/(.*)$": "<rootDir>/$1",
-      "^@common/(.*)$": "<rootDir>/common/$1"
+      "^@common/(.*)$": "<rootDir>/common/$1",
+      "^@auth/(.*)$": "<rootDir>/auth/$1"
     },
     "rootDir": "src",
     "testRegex": ".spec.ts$",
