--- a/backend/package.json
+++ b/backend/package.json
@@ -61,7 +61,7 @@
     ],
     "moduleNameMapper": {
       "^@app/(.*)$": "<rootDir>/$1",
-      "^@common/(.*)$": "<rootDir>/common/$1",
+      "^@core/(.*)$": "<rootDir>/core/$1",
       "^@auth/(.*)$": "<rootDir>/auth/$1"
     },
     "rootDir": "src",
