--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,7 +12,7 @@
     "incremental": true,
     "paths": {
         "@app/*": ["src/*"],
-        "@common/*": ["src/common/*"],
+        "@core/*": ["src/core/*"],
         "@auth/*": ["src/auth/*"]
     }
   },
