--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/typeorm": "^6.2.0",
     "bcrypt": "^3.0.7",
     "dotenv": "^8.2.0",
+    "minimist": "^1.2.0",
     "pg": "^7.14.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
@@ -41,6 +42,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
+    "@types/minimist": "^1.2.0",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
