Added bootstrap server function

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "command": "ts-node -r tsconfig-paths/register src/management.ts --command",
+    "command:prod": "node dist/management.ts --command",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
