Added database migrations command

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,10 @@
     "start:prod": "node dist/main",
     "command": "nest start -- --command",
     "command:prod": "node dist/main --command",
+    "create-migration": "npm run command migrations:create --",
+    "generate-migration": "npm run command migrations:generate --",
+    "migrate": "npm run command migrations:run",
+    "migrate:prod": "npm run command:prod migrations:run",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
