--- a/backend/package.json
+++ b/backend/package.json
@@ -29,12 +29,21 @@
     "@nestjs/common": "^6.10.11",
     "@nestjs/config": "0.0.7",
     "@nestjs/core": "^6.10.11",
+    "@nestjs/jwt": "^6.1.1",
+    "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.10.11",
     "@nestjs/typeorm": "^6.2.0",
+    "@usefultools/monads": "^3.0.3",
     "bcrypt": "^3.0.7",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
     "minimist": "^1.2.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.14.0",
+    "prompt-sync": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
@@ -50,6 +59,8 @@
     "@types/jest": "^24.0.18",
     "@types/minimist": "^1.2.0",
     "@types/node": "^12.7.5",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
