--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,7 @@
     "@nestjs/jwt": "^6.1.2",
     "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.10.11",
-    "@nestjs/typeorm": "^6.2.0",
+    "@nestjs/typeorm": "^6.3.4",
     "@usefultools/monads": "^3.0.3",
     "bcrypt": "^3.0.7",
     "class-transformer": "^0.2.3",
@@ -47,7 +47,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
-    "typeorm": "^0.2.22"
+    "sqlite3": "^4.1.1",
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
