--- a/backend/package.json
+++ b/backend/package.json
@@ -63,6 +63,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
+    "create-ts-index": "^1.13.2",
     "jest": "^24.9.0",
     "jest-mock-extended": "^1.0.8",
     "prettier": "^1.18.2",
