--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/test", "**/*spec.ts"]
+  "exclude": ["node_modules", "dist", "test", "**/test", "**/testing", "**/*spec.ts"]
 }
