--- a/backend/development.env
+++ b/backend/development.env
@@ -1,4 +1,4 @@
 DEBUG=true
+SECRET_KEY='FAD3AE7BC1A37BA3A85696ABC6844'
 DATABASE_URL='postgres://postgres:12345678@localhost:5432/flights-spot-dev'
-AUTH_JWT_SECRET='FAD3AE7BC1A37BA3A85696ABC6844'
 AUTH_JWT_EXPIRES_IN='120d'
