--- a/backend/package.json
+++ b/backend/package.json
@@ -48,7 +48,8 @@
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
     "sqlite3": "^4.1.1",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
