--- a/backend/package.json
+++ b/backend/package.json
@@ -26,8 +26,8 @@
     "test:e2e": "jest --config test/jest-e2e.json --runInBand"
   },
   "dependencies": {
-    "@nest-boilerplate/auth": "0.0.0",
-    "@nest-boilerplate/core": "0.0.0",
+    "@nestjs-boilerplate/auth": "0.0.0",
+    "@nestjs-boilerplate/core": "0.0.0",
     "@nestjs/common": "^7.4.4",
     "@nestjs/config": "0.5.0",
     "@nestjs/core": "^7.4.4",
