Added aircraft module: entity and sync functionality

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,6 +12,7 @@
     "incremental": true,
     "paths": {
         "@app/*": ["src/*"],
+        "@aircraft/*": ["src/aircraft/*"],
         "@source/*": ["src/source/*"]
     }
   },
