Added airline module: entity and sync functionality

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,6 +13,7 @@
     "paths": {
         "@app/*": ["src/*"],
         "@aircraft/*": ["src/aircraft/*"],
+        "@airline/*": ["src/airline/*"],
         "@source/*": ["src/source/*"]
     }
   },
