--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "@nestjs/typeorm": "^7.1.4",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "i18n-iso-countries": "^6.1.0",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
