--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,6 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "merge": "ts-node src/aircraft/crud/merge.util.ts",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -27,8 +26,8 @@
     "test:e2e": "jest --config test/jest-e2e.json --runInBand"
   },
   "dependencies": {
-    "@nestjs-boilerplate/auth": "0.0.0",
-    "@nestjs-boilerplate/core": "0.0.0",
+    "@nestjs-boilerplate/auth": "0.1.0-alpha.52",
+    "@nestjs-boilerplate/core": "0.1.0-alpha.52",
     "@nestjs/common": "^7.4.4",
     "@nestjs/config": "0.5.0",
     "@nestjs/core": "^7.4.4",
