--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,6 +14,7 @@
         "@app/*": ["src/*"],
         "@aircraft/*": ["src/aircraft/*"],
         "@airline/*": ["src/airline/*"],
+        "@airport/*": ["src/airport/*"],
         "@source/*": ["src/source/*"]
     }
   },
