--- a/backend/package.json
+++ b/backend/package.json
@@ -26,46 +26,47 @@
     "test:e2e": "jest --config test/jest-e2e.json --runInBand"
   },
   "dependencies": {
-    "@nestjs-boilerplate/auth": "0.1.0-alpha.108",
-    "@nestjs-boilerplate/core": "0.1.0-alpha.108",
-    "@nestjs/common": "^7.4.4",
-    "@nestjs/config": "0.5.0",
-    "@nestjs/core": "^7.4.4",
-    "@nestjs/jwt": "^7.1.0",
-    "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.4.4",
-    "@nestjs/typeorm": "^7.1.4",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.13.1",
-    "i18n-iso-countries": "^6.1.0",
+    "@nestjs-boilerplate/core": "0.3.1",
+    "@nestjs-boilerplate/user": "0.3.1",
+    "@nestjs-boilerplate/auth": "0.3.1",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/typeorm": "^9.0.1",
+    "class-transformer": "~0.5.1",
+    "class-validator": "~0.13.2",
+    "i18n-iso-countries": "^7.5.0",
     "node-fetch": "^2.6.1",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.3.3",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "typeorm": "^0.2.26"
+    "rxjs": "^7.6.0",
+    "typeorm": "^0.3.11"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.2",
-    "@nestjs/testing": "^7.4.4",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.2",
-    "@types/supertest": "^2.0.10",
-    "jest": "^26.4.2",
-    "jest-mock-extended": "^1.0.10",
-    "prettier": "^2.1.2",
-    "supertest": "^4.0.2",
-    "ts-jest": "^26.4.0",
-    "ts-loader": "^8.0.4",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths": "^3.9.0",
+    "@nestjs/cli": "^9.1.8",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.2.1",
+    "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.2.5",
+    "jest-mock-extended": "^3.0.1",
+    "prettier": "^2.8.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "^4.9.4"
   },
   "jest": {
     "moduleFileExtensions": [
