--- a/backend/package.json
+++ b/backend/package.json
@@ -26,26 +26,26 @@
     "test:e2e": "jest --config test/jest-e2e.json --runInBand"
   },
   "dependencies": {
-    "@nestjs-boilerplate/core": "0.3.1",
-    "@nestjs-boilerplate/user": "0.3.1",
-    "@nestjs-boilerplate/auth": "0.3.1",
+    "@nestjs-boilerplate/core": "^0.4.0",
+    "@nestjs-boilerplate/user": "^0.4.0",
+    "@nestjs-boilerplate/auth": "^0.4.0",
     "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.2.1",
-    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/jwt": "^10.0.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "~0.5.1",
-    "class-validator": "~0.13.2",
+    "class-validator": "~0.14.0",
     "i18n-iso-countries": "^7.5.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.8",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
+    "rimraf": "^4.1.1",
     "rxjs": "^7.6.0",
     "typeorm": "^0.3.11"
   },
@@ -54,14 +54,14 @@
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.2.1",
     "@types/express": "^4.17.15",
-    "@types/jest": "^29.2.5",
+    "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
     "jest": "^29.2.5",
     "jest-mock-extended": "^3.0.1",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.3",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.0.3",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
